--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,13 +1,31 @@
 ---
-title: Hello World
-description: Your first document
+title: Overview
+description: Refactoring the AI Visibility Checker Agent into new AI SDK features using Next.js and the AI Gateway.
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+## Hands-on Session: How to migrate example AI Visibility Checker app to AI SDK v5
 
-## What is Next?
+This is a hands-on workshop template for AI Ship 2025 that teaches you how to refactor AI applications from traditional patterns to modern, secure, and scalable approaches using the latest Vercel AI SDK v5 features. The workshop focuses on migrating to best practices including agents, workflows, structured outputs, and AI Elements.
 
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
-</Cards>
+## Tech Stack
+
+- Next.js - React framework for production
+- AI SDK 5 - Vercel's AI SDK with modern agent patterns
+- shadcn/ui - Beautiful, accessible component library
+- AI Gateway - All AI providers in one place
+- AI Elements - Pre-built UI components for AI interactions
+- Upstash KV - Redis-compatible storage for workflows
+- Workflows SDK - Long-running async operations
+- Vercel Sandbox - Secure code execution environment
+
+## Prerequisites
+
+Before starting the workshop, ensure you have:
+
+- ✅ React knowledge
+- ✅ Next.js experience
+- ✅ v0 Account
+- ✅ Vercel Account
+- ✅ Vercel AI Gateway API key
+- ✅ GitHub Account
+- ✅ Node.js and pnpm installed
