--- a/content/docs/09-resources.mdx
+++ b/content/docs/09-resources.mdx
@@ -22,4 +22,9 @@ description: List of resources and links
     title="Loading Environment Variables with @next/env"
     href="https://nextjs.org/docs/app/guides/environment-variables#loading-environment-variables-with-nextenv"
   />
+  <Card title="Link to Demo App" href="https://ai-ship-workshop.vercel.app/" />
+  <Card
+    title="Workshop Presentation"
+    href="https://docs.google.com/presentation/d/124cHZDGh6Lz2045qzPb1w4ja51ZSAYAdMVqBa8ziGXE/edit?slide=id.g38de1835cfc_0_2151#slide=id.g38de1835cfc_0_2151"
+  />
 </Cards>
