--- a/content/docs/01-setup.mdx
+++ b/content/docs/01-setup.mdx
@@ -33,7 +33,7 @@ import { Step, Steps } from "fumadocs-ui/components/steps";
   <Step>
     Link your local project to vercel project
     ```bash
-    verel link
+    vercel link
     ```
   </Step>
   <Step>
