--- a/content/docs/04-refactor-brand-context.mdx
+++ b/content/docs/04-refactor-brand-context.mdx
@@ -25,7 +25,7 @@ const brandContextSchema = z.object({ // [!code ++]
   comprehensiveSummary: z // [!code ++]
     .string() // [!code ++]
     .describe("A comprehensive paragraph summary for generating questions"), // [!code ++]
-}); // [!code ++]]
+}); // [!code ++]
 ```
 
 </Step>
